# PlatonicNav

./: .gitignore  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml  styles.css
configs/: iin_gtmask.yaml  ovon_bm.yaml  r2rce_bm.yaml
docs/: datasets.md  pipeline_iin_gtmask.md  pipeline_ovon_ideal.md  pipeline_r2rce_goal_extraction.md  setup.md  third_party.md
envs/: etpnav.yml  objectreact-nav.yml  platonicnavtm-bm.yml  shared-sam2map.yml
examples/iin_tiny/: episode_manifest.json  goal_mask.json  graph.json  segments.jsonl
examples/ovon_tiny/: episode_manifest.json  graph.json  segments.jsonl  vocabulary.json
examples/r2rce_tiny/: episode_manifest.json  graph.json  segments.jsonl
scripts/: prepare_assets.py  run_iin_gtmask.py  run_ovon_bm.py  run_r2rce_bm.py
src/platonicnav/: __init__.py  schemas.py
src/platonicnav/control/: __init__.py  objectreact_handoff.py
src/platonicnav/grounding/: __init__.py  blind_match.py  clusters.py  gtmask_iou.py  instruction_goal_extractor.py  language_encoder.py  leakage.py  vocab.py
src/platonicnav/mapping/: __init__.py  assets.py  background_cull.py  graph_io.py  ptm.py  vision_encoder.py
src/platonicnav/pipeline/: __init__.py  common.py  iin.py  ovon.py  r2rce.py
src/platonicnav/planning/: __init__.py  candidate_dijkstra.py
tests/: test_blind_match_schema.py  test_candidate_dijkstra.py  test_gtmask_goal_grounding.py  test_instruction_goal_extraction.py  test_no_goal_metadata_leakage.py  test_ovon_pipeline.py  test_ptm_edge_weights.py
(+13 files in other folders)
