[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platonicnav"
version = "0.1.0"
description = "PlatonicNav public paper repository"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.0",
  "numpy>=1.23",
  "PyYAML>=6.0",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
